mdapi/objects/Video__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Embedded help and training video content  - Paste embed iframe code from YouTube</description>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Embed_URL__c</fullName>
        <description>Select the &quot;Embed Media&quot; Icon and then paste the iframe code from YouTube, Vimeo and Dailymotion videos.</description>
        <label>Video</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Intended_Audience__c</fullName>
        <label>Intended Audience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                    <default>true</default>
                    <label>Internal</label>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Versions__c</fullName>
        <description>List of products and exact versions or ranges of versions where this message can be seen.
Example:  ShadowProtect SPX (Windows) - All</description>
        <inlineHelpText>List of products and exact versions or ranges of versions where this message can be seen.
Example:  ShadowProtect SPX (Windows) - All</inlineHelpText>
        <label>Product Versions Affected</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Video_Duration__c</fullName>
        <description>Total Video Playback Duration Time - Example Format:  1:02:20   (for 1 hour 2 minutes 20 seconds)</description>
        <label>Video Duration</label>
        <length>9</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_URL__c</fullName>
        <description>URL to External Video Link  - Non Embedded link - Example:  https://www.youtube.com/watch?v=LTB4O9KAXnk</description>
        <label>Video URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Video</label>
    <pluralLabel>Videos</pluralLabel>
    <validationRules>
        <fullName>Video_Duration_Rule</fullName>
        <active>true</active>
        <description>Make sure Video Duration is in time format 00:00</description>
        <errorConditionFormula>NOT(REGEX( Video_Duration__c , &quot;[0-9]{1,2}:[0-5][0-9]&quot; ))</errorConditionFormula>
        <errorMessage>Make sure Video Duration is in time format 00:00</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Video_Title_Length_Rule</fullName>
        <active>true</active>
        <description>Require that the title is less than 66 characters</description>
        <errorConditionFormula>LEN( Title ) &gt; 65</errorConditionFormula>
        <errorMessage>Title Length too long - To optimize Search Engine results, the article title must be less than 66 characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Video_Title_Rule</fullName>
        <active>true</active>
        <description>Require that the title begins with Video:</description>
        <errorConditionFormula>NOT(BEGINS(Title,&apos;Video: &apos;))</errorConditionFormula>
        <errorMessage>To make it easier to find video articles, make sure the title begins with &quot;Video: &quot;</errorMessage>
    </validationRules>
</CustomObject>